--- a/package.json
+++ b/package.json
@@ -8,23 +8,28 @@
     "start": "next start",
     "lint": "next lint",
     "sync-vault": "node lib/librarian.js",
-    "deploy": "npm run sync-vault && npm run build"
+    "deploy": "npm run sync-vault && npm run build",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:report": "playwright show-report"
   },
   "dependencies": {
+    "framer-motion": "^11.3.0",
+    "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "^11.3.0",
-    "zustand": "^4.5.4",
-    "lucide-react": "^0.424.0"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@types/node": "^20.14.0",
+    "@playwright/test": "^1.58.2",
+    "@types/node": "^20.19.33",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.5.0",
-    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.5.0"
   }
 }
