feat(phase 5): SPIO Live-Preview Engine

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "test:e2e:report": "playwright show-report"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "framer-motion": "^11.3.0",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-live": "^4.1.8",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
