--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "scan-vault": "node lib/scan-vault.js",
     "sync-vault": "node lib/librarian.js",
     "deploy": "npm run sync-vault && npm run build",
     "test:e2e": "playwright test",
